# studentipy

./: .gitignore  README.md  pyproject.toml  studentify.py  studentify_bis.py
.github/workflows/: test.yml
tests/: test_functional.py  test_unit.py
tests/fixtures/cpp/: expected.cpp  expected_clean.cpp  input.cpp
